# JWTAuthService

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/v1/endpoints/: login.py  registration.py
app/core/: config.py  security.py
app/db/: session.py
app/migrations/: env.py
app/migrations/versions/: e056968d2bd4_initial_first_migration.py
app/models/: user.py
app/schemas/: user.py
app/services/: db_service.py
