[tool.poetry]
name = "fastapi-jwt-auth"
version = "0.1.0"
description = "A simple FastAPI service for JWT-based authentication"
authors = ["Anakion(Anatoliy)"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
